--- a/1lab/index.html
+++ b/1lab/index.html
@@ -2,6 +2,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
+    <br />
+    2) С помощью команды ping на учебном сервере узнать IP-адрес веб-сервера
+kubsu.ru, сделать скриншот вызова команды ping, добавить скриншот в git-
+репозитарий задания.
+3) С помощью команды nslookup узнать A-записи и MX-записи домена kubsu.ru и
+kubsu-dev.ru, добавить скриншоты в git-репозитарий задания.
+4) С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsu-
+dev.ru, добавить скриншоты в git-репозитарий задания.
+5) Сделать веб-страницу index.html со скриншотами, добавить ее в git, с помощью
+SSH склонировать репозитарий со скриншотами и страницей в каталог /var/www/html/
+ваш_логин/. Веб-страница должна открываться по адресу http://ваш_логин.kubsu-
+dev.ru/каталог_задания_1/
+6) С помощью программы FileZilla или любого другого клиента FTP соединиться с
+учебным сервером с вашим логином и паролем по протоколу FTP и скопировать на
+локальный компьютер файлы задания из каталога /var/www/html/ваш_логин/. Сделать
+скриншот FTP-клиента после скачивания файлов, добавить скриншот в GIT и на
+страницу.
+<br />
     <img src="1.jpg" alt="logo">
     <img src="2.jpg" alt="logo">
     <img src="3.jpg" alt="logo">
