--- a/1lab/index.html
+++ b/1lab/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <body>
     <br />
     2) С помощью команды ping на учебном сервере узнать IP-адрес веб-сервера
