--- a/1lab/index.html
+++ b/1lab/index.html
@@ -3,11 +3,8 @@
 <html lang="ru">
 <body>
     <br />
-    2) С помощью команды ping на учебном сервере узнать IP-адрес веб-сервера
-kubsu.ru, сделать скриншот вызова команды ping, добавить скриншот в git-
-репозитарий задания.
-3) С помощью команды nslookup узнать A-записи и MX-записи домена kubsu.ru и
-kubsu-dev.ru, добавить скриншоты в git-репозитарий задания.
+
+
 4) С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsu-
 dev.ru, добавить скриншоты в git-репозитарий задания.
 5) Сделать веб-страницу index.html со скриншотами, добавить ее в git, с помощью
@@ -20,7 +17,18 @@ dev.ru/каталог_задания_1/
 скриншот FTP-клиента после скачивания файлов, добавить скриншот в GIT и на
 страницу.
 <br />
+    С помощью команды ping на учебном сервере узнать IP-адрес веб-сервера
+kubsu.ru
+     <br />
+     С помощью команды nslookup узнаём A-записи и MX-записи домена kubsu.ru и
+kubsu-dev.ru
+     <br />
+    
+   
     <img src="1.jpg" alt="logo">
+    4) С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsu-
+dev.ru, добавить скриншоты в git-репозитарий задания.
+     <br />
     <img src="2.jpg" alt="logo">
     <img src="3.jpg" alt="logo">
 
